--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -144,14 +144,36 @@ h2{
 
 .company img{
     height: 55px;
+
 }
 
 footer .wrap{
-    border-color: #EEEEEE;
+    text-align: left;
 }
 
-footer .wrap h2{
+.info{
+    width: 1140px;
+    padding: 5px 15px;
+    margin:  5px 15px;
+    text-align: left; 
+}
+
+.info h5{
     font-size: 20px;
     font-weight: bold;
 }
+
+.info p{
+font-size: 13px;
+margin: 10px;
+}
+
+
+#conect a{
+    padding: 3px;
+    margin: 3px;  
+    color: black; 
+    text-decoration:none;
+}
+
 
