--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-wrap: wrap;
 }
+
 .menu{
     width: auto;
     margin: 15px;
@@ -27,6 +28,46 @@
 .menu a:hover{
     color: #55AFB7;
 }
+
+
+.ads{
+    width: 1140px;
+    padding: 15px;
+    margin: 15px;
+    text-align: center;
+    margin-top: 60px;
+}
+.ads h3{
+    color: white;
+    width: 300px;
+    padding: 15px;
+    background-color: rgba(1, 85, 163, 0.6);
+    font-size: 40px;
+    font-weight: bolder;
+}
+.sign{
+    width: 340px;
+    padding: 15px;
+    margin: 15px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.sign a{
+    width: 300px;
+    color: white;
+    margin: 15px;
+    padding: 15px 30px;
+    background-color: rgba(1, 85, 163, 0.6);
+    font-size: 16px;
+    font-weight: bolder;
+    text-decoration:none;
+}
+
+.sign a:hover{
+    background-color: #2B689C;
+}
+
 h1{
     padding-bottom: 3px;
     text-align: center;
@@ -174,6 +215,7 @@ margin: 10px;
     margin: 3px;  
     color: black; 
     text-decoration:none;
+    vertical-align: baseline;
 }
 
 
