--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -5,6 +5,19 @@
     flex-wrap: wrap;
 }
 
+.logo{
+    width: auto;
+    margin: 15px;
+    color: white;
+    text-align: center;
+}
+
+.logo a{
+        text-decoration:none;
+        color: white;
+        text-align: center; 
+}
+
 .menu{
     width: auto;
     margin: 15px;
