--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -221,12 +221,11 @@ margin: 10px;
 }
 
 
-#conect a{
+#contact a{
     padding: 3px;
     margin: 3px;  
     color: black; 
     text-decoration:none;
-    vertical-align: baseline;
 }
 
 
