--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -1,3 +1,9 @@
+header{
+    background-image: url(img/asset\ 1.webp);background-size: 100% auto;
+    background-repeat: no-repeat;
+
+}
+
 .wrap{
     width: 1200px;
     margin: auto;
@@ -213,13 +219,20 @@ footer .wrap{
 .info h5{
     font-size: 20px;
     font-weight: bold;
+    font-size: 16px; 
+    text-align: left;
+    width: 400px;
+    font-weight: normal;line-height: 22px;
 }
 
 .info p{
-font-size: 13px;
-margin: 10px;
+    font-size: 13px;
+    margin: 10px;
 }
 
+#contact {
+    background-color: #EEEEEE 
+}
 
 #contact a{
     padding: 3px;
