--- a/hw_week2/css.css
+++ b/hw_week2/css.css
@@ -1,7 +1,7 @@
 header{
     background-image: url(img/asset\ 1.webp);background-size: 100% auto;
     background-repeat: no-repeat;
-
+    min-width: 700px;
 }
 
 .wrap{
@@ -196,8 +196,8 @@ h2{
 
 .company{
     width: 240px;
-    height: 40px;
-    padding: 15px;
+    height: 90px;
+    padding: 2px 15px;
     margin: 15px;
     text-align: center; 
 }
