--- a/hw_week3/css.css
+++ b/hw_week3/css.css
@@ -125,11 +125,15 @@ h1::after{
     z-index: 2;
 }
 
-.adv .car{
+.car{
     position: relative;
     margin: auto;
     z-index: 1;
     left: 50px;
+}
+
+.adv:nth-of-type(even) .car{
+    left: -180px;
 }
 
 
@@ -144,13 +148,25 @@ h1::after{
     right: -15px;
 }
 
+.adv:nth-of-type(even) .car::after{
+    bottom: 50%;
+    left: -15px;
+}
+
 .grey{
     width: 439px;
     height: 290px;
     background-color: #F5F5F5;
     z-index: 0;
-    right: 100px;
+    right: 140px;
     top: -120px;
+}
+
+.adv:nth-of-type(even) .grey{
+    width: 518px;
+    height: 413px;
+    top: -70px;
+    right: 320px;
 }
 
 .feature{
@@ -158,6 +174,11 @@ h1::after{
     color: white;
     top: -120px;
     left: 80px;
+    z-index: 2;
+}
+
+.adv:nth-of-type(even) .feature{
+    left: 700px;
 }
 
 .revolution{
@@ -168,10 +189,17 @@ h1::after{
     left: 100px;
 }
 
+.adv:nth-of-type(even) .revolution{
+    left: 350px;
+}
+
 .feature .index{
     display: flex;
     margin-bottom: 0;
+}
 
+.adv:nth-of-type(even) .feature .index{
+    flex-direction: row-reverse;
 }
 
 .index p{
@@ -184,6 +212,8 @@ h1::after{
 
 .index h2{
     width: 240px;
+    padding-top: 40px;
+    text-align: center;
     font-size: 55px;
     line-height: 60px;
     color: white;
