--- a/hw_week3/css.css
+++ b/hw_week3/css.css
@@ -46,6 +46,7 @@ h1{
     font-size: 45px;
     text-align: center;
     padding: 15px;
+    margin-bottom: 40px;
     position: relative;
     display: flex;
     justify-content: center;
