--- a/hw_week4_1/style.scss
+++ b/hw_week4_1/style.scss
@@ -245,17 +245,19 @@ nav a{
             background-color: transparent;
         }
         .col-12{
-            background-color: #3F81FF;
             margin: 30px 0px;
             padding: 20px;
             border-radius: 5%;
-            p{
-                font-size: 30px;
-                text-align: center;
-            }
-            & p:nth-of-type(2){
-                font-size: 14px;
-            }
+            .data{
+                background-color: #3F81FF;
+                p{
+                    font-size: 30px;
+                    text-align: center;
+                }
+                & p:nth-of-type(2){
+                    font-size: 14px;
+                }
+            }       
         }
     }
 }
@@ -467,13 +469,24 @@ footer{
         .col-md-6{
             display: flex;
             flex-wrap: wrap;
+            // a{
+            //     display: block;
+            //     justify-content: flex-start
+            // }
             .col-md-6{
+                // display: flex;
+                // flex-wrap: wrap;
+                margin: 0;
+
+                .data{
                 display: flex;
                 flex-wrap: wrap;
+                width: 90%;
+                height: 120%;
                 box-sizing: border-box;
-                padding: 10px;
-                .data{
-                    margin: 10px;
+                border-radius: 10%;
+                align-content: center;
+                padding: 0 26px;
                     p{
                         width: 100%;
                     }
