--- a/FoodBar/style.css
+++ b/FoodBar/style.css
@@ -15,6 +15,17 @@
     }
 
     #msg {
-      font-size: 36px;
+      font-size: 20px;
       text-align: center;
+    }
+
+
+    
+    button{
+      height: 100px;
+      width: 100px;
+      border: 1px solid red;
+      background-color: red;
+      color: white;
+      font-size: 50px;
     }
